# prueba-marketgoo

./: README.md
marketgoo.test1.cpp/: CMakeLists.txt  matrix.cpp
marketgoo.test2.php/: .gitignore  composer.json  index.php
marketgoo.test2.php/conf/: conf.json  example.conf.json
marketgoo.test2.php/server/: index.php  phpunit.xml.dist
marketgoo.test2.php/server/src/Configuration/: ConfigurationReader.php
marketgoo.test2.php/server/src/Region/: RegionFinderFactory.php
marketgoo.test2.php/server/tests/Configuration/: ConfigurationReaderTest.php
marketgoo.test2.php/server/tests/Model/: AggregatorSolverTest.php
marketgoo.test2.php/server/tests/Region/: RegionFinderFactoryTest.php
marketgoo.test2.php/server/tests/Resources/: conf.test.json
marketgoo.test2.php/src/Conf/: ConfReader.php
marketgoo.test2.php/src/Model/: UserRepository.php
marketgoo.test2.php/src/Model/Aggregation/: Aggregator.php  IpRegionAggregator.php
marketgoo.test2.php/src/Model/Region/: Region.php
marketgoo.test2.php/src/Model/User/: UserRepository.php
marketgoo.test2.php/src/Region/: LocalFileFinder.php  RegionFinder.php  RegionFinderFactory.php  WebServiceFinder.php
marketgoo.test2.php/src/Region/Strategy/: RegionFinderStrategy.php  StrategyFactory.php  WebServiceStrategy.php
marketgoo.test2.php/src/Request/: RequestQueryParameter.php
marketgoo.test2.php/tests/Model/: UserRepositoryTest.php
marketgoo.test2.php/tests/Region/: LocalFileFinderTest.php  RegionFinderFactoryTest.php  WebServiceFinderTest.php
marketgoo.test2.php/tests/Request/: RequestQueryParameterTest.php
(+48 files in other folders)
